include new instructions from code repo

--- a/submission.html
+++ b/submission.html
@@ -77,7 +77,7 @@
                                       <ul>
                                         <li>Note: You may or may not train your visual representation model on our datasets. However, the datasets are still needed for training BC agents for submission. </li>
                                       </ul>
-                                      <li>Install the TOTO repo <a href="https://github.com/AGI-Labs/toto_starter" target="_blank"><b>here</b></a>.</li> 
+                                      <li>Install the <strong>toto_benchmark</strong> repo <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release" target="_blank"><b>here</b></a>.</li> 
                                       <li>Create an assets/ folder for storing datasets and models.</li>
                                           <!-- TODO: add a code block with the following code:
                                           cd toto_starter
@@ -87,11 +87,23 @@
                                           assets/
                                             - cloud-dataset-scooping/
                                             - cloud-dataset-pouring/ -->
-                                      <li>Follow the instructions in the repo's README.md and fill in your implementations. </li>
+                                            <!-- show folder structure below -->
+                                          <ul>
+                                            <li> <code>- assets/</code></li>
+                                            <ul>
+                                              <li> <code>- cloud-dataset-pouring/ </code></li>
+                                              <li> <code>- cloud-dataset-scooping/ </code></li>
+                                            </ul>  
+                                          </ul>
+                                            
+                                      <!-- add link -->
+
+                                      <li>Follow the instructions in the repo's <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release#type-1-contributing-a-visual-representation-model">README.md</a> and fill in your implementations. </li>
                                       <!-- <li>Use our vision model wrapper here to initialize your vision model</li>
                                       <li>Run the data_generator script here to generate a new dataset with the wrapped vision model</li> -->
                                       <!-- <li>Train a BC agent on the newly generated dataset using the script here.</li> -->
-                                      <li>Prepare your agent for submission. Ensure that your zipped folder contains the following files</li>
+                                      
+                                      <li>Run <code> prepare_submission.sh </code> script to prepare your agent for submission.</li>
                                       <!-- TODO: submit the whole toto_starter repo? -->
                                       <!-- <li>TODO: Add folder structure here.</li> -->
                                       <li>Submit your zipped folder for evaluation using this google <a href="https://docs.google.com/forms/d/e/1FAIpQLScrfl3ugtX2U8I8Zv64ZlniHc9pOLZScIn-OQMg5xrj0WwLYA/viewform?usp=sf_link" target="_blank"><b>form</b></a>.</li>
@@ -102,11 +114,10 @@
                                     <ol>
                                       <!-- TODO: need to update the link after dataset cleanup on google drive -->
                                       <li>Download the dataset <a href="https://drive.google.com/drive/folders/1pDD8c2cUtLFtyAScL5hzJBwnKWsnKnXN?usp=sharing" target="_blank"><b>here</b></a>.</li>
-                                      <li>Update the agent file: agents/CollaboratorAgent.py. This acts as a wrapper around your model to interface with the robot stack. Please refer to agents/Agent.py for more information</li>
-                                      <li>Update the agent config file outputs/collaborator_agent/hydra.yaml for initializing your agent</li>
-                                      <li>Once the above is done, run python test_stub_env.py -f outputs/collaborator_agent/ for a simple simulated test on the robot. If everything works as expected, we are ready to have the agent to be evaluated on the real robot!</li>
-                                      <li>Prepare your agent for submission. Ensure that your zipped folder contains the following files</li>
-                                      <li>TODO: Add folder structure here.</li>
+                                      <li>Install the <strong>toto_benchmark</strong> repo <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release" target="_blank"><b>here</b></a>.</li> 
+                                      <li>Train your agents in your preferred way.</li>
+                                      <li>Follow the instructions in the repo's <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release#type-2-contributing-an-agent">README.md</a> and fill in your implementations. </li>
+                                      <li>Run <code> prepare_submission.sh </code> script to prepare your agent for submission.</li>
                                       <li>Submit your zipped folder for evaluation using this google <a href="https://docs.google.com/forms/d/e/1FAIpQLScrfl3ugtX2U8I8Zv64ZlniHc9pOLZScIn-OQMg5xrj0WwLYA/viewform?usp=sf_link" target="_blank"><b>form</b></a>.</li>
                                       <li>We will evaluate your method on the robot hardware and update your position on the leaderboard.</li>
                                     </ol>
