--- a/submission.html
+++ b/submission.html
@@ -83,16 +83,12 @@
                                     <h2>Visual Representation Model Submission Instructions</h2>
                                     <ol>
                                       <!-- TODO: need to update the link after dataset cleanup on google drive -->
-                                      <li>Download the dataset <a href="https://drive.google.com/drive/folders/1pDD8c2cUtLFtyAScL5hzJBwnKWsnKnXN?usp=sharing" target="_blank"><b>here</b></a>.</li>
-                                      <ul>
-                                        <li>Note: You may or may not train your visual representation model on our datasets. However, the datasets are still needed for training BC agents for submission. </li>
-                                      </ul>
+                                      <li>Download the dataset <a href="https://drive.google.com/drive/folders/1JGPGjCqUP4nUOAxY3Fpx3PjUQ_loo7fc?usp=share_link" target="_blank"><b>here</b></a>.</li>
                                       <li>Install the <strong>toto_benchmark</strong> repo from <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release" target="_blank"><b>here</b></a>.</li> 
-                                      <li>Create an assets/ folder for storing datasets and models.</li>
                                           <!-- TODO: add a code block with the following code:
                                           cd toto_starter
                                           mkdir assets -->
-                                      <li>Move and unzip the datasets in assets/, so it has the following structure: </li>
+                                      <li>Move and unzip the datasets into the <strong>assets</strong> folder, so it has the following structure: </li>
                                           <!-- TODO: add a block to show:
                                           assets/
                                             - cloud-dataset-scooping/
@@ -102,6 +98,7 @@
                                             <li> <code>- assets/</code></li>
                                             <ul>
                                               <li> <code>- cloud-dataset-pouring/ </code></li>
+                                              <br>
                                               <li> <code>- cloud-dataset-scooping/ </code></li>
                                             </ul>  
                                           </ul>
