fixed styling issues

--- a/index.html
+++ b/index.html
@@ -43,14 +43,13 @@
 <body>
   <!-- add navigation bar -->
   <div id="topnav">
-    <ul>
+    <ul class="nav-list">
       <li><a class="nav-link" href="#code">Code</a></li>
       <li><a class="nav-link" href="#code">Dataset</a></li>
       <li><a class="nav-link" href="#overview">Overview</a></li>
       <li><a class="nav-link" href="#results">Results</a></li>
       <li><a class="nav-link" href="submission.html">Submission</a></li>
       <!-- link a new submissions html page -->
-
     </ul>
 
   </div>
