--- a/submission.html
+++ b/submission.html
@@ -43,7 +43,7 @@
 <body>
   <!-- add navigation bar -->
   <div id="topnav">
-    <ul>
+    <ul class="nav-list">
       <li><a class="nav-link" href="index.html">Home</a></li>
     </ul>
 
