updated dataset url

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
         <span style="font-size:25px;">
           <!-- <a href="" target="_blank"><b>Paper</b></a>   -->
           <a href="https://github.com/AGI-Labs/TOTO_starter" target="_blank"><b>Code</b></a>  
-          <a href="https://drive.google.com/drive/folders/1pDD8c2cUtLFtyAScL5hzJBwnKWsnKnXN?usp=sharing" target="_blank"><b>Dataset</b></a>
+          <a href="https://drive.google.com/drive/folders/1JGPGjCqUP4nUOAxY3Fpx3PjUQ_loo7fc?usp=share_link" target="_blank"><b>Dataset</b></a>
   
         </span>
       </h2>
