--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- add navigation bar -->
   <div id="topnav">
     <ul class="nav-list">
-      <li><a class="nav-link" href="#code">Code</a></li>
+      <li><a class="nav-link" href="https://github.com/AGI-Labs/toto_benchmark/tree/release">Code</a></li>
       <li><a class="nav-link" href="#code">Dataset</a></li>
       <li><a class="nav-link" href="#overview">Overview</a></li>
       <li><a class="nav-link" href="#results">Results</a></li>
@@ -110,7 +110,7 @@
           <!-- <a href="" target="_blank"><b>Paper</b></a>   -->
           <a href="https://github.com/AGI-Labs/toto_benchmark/tree/release" target="_blank"><b>Code</b></a>  
           <a href="https://drive.google.com/drive/folders/1JGPGjCqUP4nUOAxY3Fpx3PjUQ_loo7fc?usp=share_link" target="_blank"><b>Dataset</b></a>
-  
+ 
         </span>
       </h2>
       </div>
