:pencil2: add data link

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div id="topnav">
     <ul class="nav-list">
       <li><a class="nav-link" href="https://github.com/AGI-Labs/toto_benchmark/tree/release">Code</a></li>
-      <li><a class="nav-link" href="#code">Dataset</a></li>
+      <li><a class="nav-link" href="https://drive.google.com/drive/folders/1JGPGjCqUP4nUOAxY3Fpx3PjUQ_loo7fc?usp=share_link">Dataset</a></li>
       <li><a class="nav-link" href="#overview">Overview</a></li>
       <li><a class="nav-link" href="#results">Results</a></li>
       <li><a class="nav-link" href="submission.html">Submission</a></li>
